# Amun

./: .gitignore  CHECKPOINTS.md  LICENSE  README.md  TESTING.md  pyproject.toml  requirements.txt
data/: breath_labelled.csv  calibration_sample.csv
docs/: ARCHITECTURE.md  CALIBRATION.md  HARDWARE.md  SIGNAL_PIPELINE.md
hardware/: amun_amulet.ino
model/: profile.json
notebooks/: breath_eda.ipynb
src/amun/: __init__.py  __main__.py  calibrate.py  classify.py  engine.py  features.py  ingestion.py  preprocessing.py  server.py  thinkgear.py
src/amun/templates/: index.html
tests/: conftest.py  test_classify.py  test_engine.py  test_features.py  test_server.py  test_thinkgear.py  test_websocket.py
tools/: _artkit.py  gen_assets.py  make_banner.py  make_demo.py  make_sample_data.py  test_all.py
web/: README.md  package.json
web/public/: amun-core.js  index.html
web/test/: core.test.js
